# feverish

./: .editorconfig  .env.pi.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONVERSION.md  Dockerfile  IOS_CLIENT_PLAN.md  NEXT_STEPS.md  README.md  SECURITY.md  claude.md  docker-compose.pi.yml  docker-compose.yml  entrypoint.sh  logs.txt  main.py  manage.py  pyproject.toml  pytest.ini  setup_demo.py  test_api.py
.github/workflows/: deploy.yml
api/: admin.py  models.py  tests.py  urls.py  utils.py  views.py  web_views.py
api/management/commands/: refresh_feeds.py
api/migrations/: 0001_initial.py  0002_feveruser_fever_api_key.py  0003_feveruser_groups_feveruser_is_active_and_more.py  0004_alter_favicon_last_cached_on_time_and_more.py  0005_feed_user_title_alter_feed_url_checksum.py  0006_item_uid_link_to_text_title_to_512.py
deploy/: feverish-web.yaml  feverish-worker.yaml
fever_django/: asgi.py  settings.py  urls.py  wsgi.py
feverish/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: background_refresh.sh  deploy_azure.sh  setup_azure_infra.sh
templates/: login.html  reader.html
